# vdns

./: Cargo.toml  docker-compose.yml
src/: cli.rs  main.rs
src/common/: domain_name.rs  formatting.rs  ip_address.rs  mod.rs  q_class.rs  resolvconf.rs  rr_type.rs  ttl.rs
src/messages/: message.rs  mod.rs  parsing.rs  serializing.rs
src/messages/header/: flags.rs  message_header.rs
src/messages/question/: Question.rs  mod.rs  question.rs
src/messages/resource_record/: a.rs  aaaa.rs  mod.rs  resource_record.rs  rr_data.rs  soa.rs
vdns_client/src/: cli.rs  main.rs
vdns_lib/src/: lib.rs
vdns_lib/src/common/: class.rs  domain_name.rs  mod.rs  parse_error.rs  q_class.rs  rr_type.rs  ttl.rs
vdns_lib/src/messages/: message.rs  mod.rs  parsing.rs  serializing.rs
vdns_lib/src/messages/header/: flags.rs  message_header.rs  mod.rs
vdns_lib/src/messages/question/: question.rs
vdns_lib/src/messages/resource_record/: a.rs  aaaa.rs  mod.rs  resource_record.rs  rr_data.rs  soa.rs
vdns_server/src/: cache.rs  main.rs
