[package]
name = "vdns"
version = "0.1.0"
edition = "2021"

[lib]
name = "vdns_lib"
path = "vdns_lib/src/lib.rs"

[[bin]]
name = "vdns_client"
path = "vdns_client/src/main.rs"

[[bin]]
name = "vdns_server"
path = "vdns_server/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
mobc-redis = "0.7.0"
mobc = "0.7.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"